# hospital-simulator

./: CMakeLists.txt
src/: main.cpp  patient.h
tests/: test_Patient.cpp
